plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.14'
}

application {
    mainClass = "com.foodhub.Main"
}

group = 'com.foodhub'
version = '0.1.0'

sourceCompatibility = 17
targetCompatibility = 17

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.jfoenix:jfoenix:9.0.10'
    implementation 'org.openjdk.nashorn:nashorn-core:15.4'
    implementation 'org.xerial:sqlite-jdbc:3.42.0.0'
    implementation 'org.json:json:20230618'
    implementation 'commons-validator:commons-validator:1.7'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

tasks.withType(JavaExec).configureEach {
    systemProperty('javafx.allowjs', 'true')
    jvmArgs += ['--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED']
}

javafx {
    version = '17.0.7'
    modules = ['javafx.controls', 'javafx.fxml']
}